# dive-backend

./: .coveragerc  .gitignore  .travis.yml  Makefile  Pipfile  README.md  coverage.yml  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
api-docs/: api_docs.py  apps.py
api_docs/: api_docs.py
config/: urls.py
config/settings/: common.py  local.py  production.py
contact/: serializers.py  urls.py  views.py
contact/tests/: test_serializers.py
content/: admin.py  apps.py  choices.py  forms.py  models.py  serializers.py  urls.py  views.py
content/migrations/: 0001_create_tree_node_model.py  0002_create_plant_model.py  0003_create_leaf_model.py  0004_create_sprout_model.py  0005_create_fruit_model.py  0006_create_blossom_model.py  0007_auto_20200407_1501.py  0008_add_blanks_to_choice_fields.py  0009_add_blank_and_null_to_integer_fields.py  0010_blank_instead_of_default_empty_string.py  0011_change_plant_habitat_choices.py  0012_create_spr_structure_field.py  0013_change_display_names.py  0014_add_blossom_type_choice.py  0015_add_habitat_choice.py  0016_add_leaflet_choice.py  (+2 more)
dive_content/: admin.py  apps.py  choices.py  fields.py  forms.py  models.py  outputs.py  serializers.py  urls.py  views.py  widgets.py
glossary/: admin.py  models.py  serializers.py  serialzier.py  tests.py  urls.py  views.py
message/: admin.py  models.py  serializers.py  urls.py  views.py
quiz/: admin.py  models.py  serializers.py  urls.py  views.py
slideshow/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
some/: module.py
utility/: forms.py
(+226 files in other folders)
