[tool]
[tool.poetry]
name = "quiz"
description = "something"
authors = ["",]
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.7"
django = "*"
django-cleanup = "*"
django-cors-headers = "*"
django-environ = "*"
django-mptt = "*"
djangorestframework = "*"
drf-yasg = "*"
gevent = "==1.4.0"
gunicorn = "*"
markupsafe = "==1.1.1"
pillow = "*"
psycopg2-binary = "*"
raven = "*"
solid-backend = "0.1.21"
whitenoise = "*"
django-anymail = "^8.2"

[tool.poetry.dev-dependencies]
black = "19.10b0"
codecov = "*"
coverage = "*"
django-coverage-plugin = "*"
django-debug-toolbar = "*"
django-extensions = "*"
ipdb = "*"
pytest = "==5.3.5"
pytest-cov = "*"
pytest-django = "*"
pytest-isort = "*"
pytest-sugar = "*"
werkzeug = "*"
